force-app/main/default/objects/updation_of_fields_of_contacts__e/updation_of_fields_of_contacts__e.object-meta.xml
<CustomObject>
    <description>Whenever the fields of the contact is changed this event will get triggered.</description>
    <label>updation of fields of contacts</label>
    <pluralLabel>updation of fields of contacts</pluralLabel>
</CustomObject>