force-app/main/default/objects/updation_of_fields_of_contacts__e/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>It stores the email of the contacts.</description>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>