force-app/main/default/objects/updation_of_fields_of_contacts__e/fields/New_Value__c.field-meta.xml
<CustomField>
    <fullName>New_Value__c</fullName>
    <description>It stores the new value of the name field of contact object.</description>
    <label>New Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>