force-app/main/default/objects/updation_of_fields_of_contacts__e/fields/New_Value_City__c.field-meta.xml
<CustomField>
    <fullName>New_Value_City__c</fullName>
    <description>It stores the new value of the city.</description>
    <label>New Value City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>