force-app/main/default/objects/updation_of_fields_of_contacts__e/fields/Old_Name__c.field-meta.xml
<CustomField>
    <fullName>Old_Name__c</fullName>
    <description>It stores the old name of the contact object.</description>
    <label>Old Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>