force-app/main/default/objects/updation_of_fields_of_contacts__e/fields/Old_value_city__c.field-meta.xml
<CustomField>
    <fullName>Old_value_city__c</fullName>
    <description>It stores the old value of the city.</description>
    <label>Old value city</label>
    <length>255</length>
    <type>Text</type>
</CustomField>